<?xml version="1.0" encoding="utf-8"?>
<!-- 
    This file is part of QuickMeeting.

    QuickMeeting is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    QuickMeeting is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.
    You should have received a copy of the GNU General Public License
    along with QuickMeeting.  If not, see <http://www.gnu.org/licenses/>.    
 -->
<resources>
    <string name="app_name">QuickMeeting</string>
    <string name="about">About</string>
    <string name="aboutThisSoftware">About this software</string>
    <string name="changeLog">Change Log</string>
    <string name="changeLogHelp">Differences and improvements in each version</string>
    <string name="license">License</string>
    <string name="licenseGNU">GNU General Public License</string>
    
    
    
    <string name="manageAccounts">Manage Accounts</string>
    <string name="accounts">Accounts</string>
    <string name="activeAccountNotDefined">Active account not defined</string>
    <string name="addAccount">Add Account</string>
    <string name="addAccountHelp">Add an account to see the resources</string>
    <string name="deleteInactiveAccount">Delete Inactive Account</string>
    <string name="deleteInactiveAccountHelp">Delete an unused account</string>
    <string name="currentActiveAccount">Current Active Account</string>
    <string name="changeActiveAccount">Define stored Account as Active</string>
    <string name="changeActiveAccountHelp">Define a stored account as active</string>
    
    <string name="accountConfigured">New account configured and defined as active</string>
    
    <!--  Preference config -->
    <string name="userInterface">User Interface</string>
    <string name="keepScreenOn">Keep screen on</string>
    
    <string name="problemOcurred">Oops, an error occurred, please try again! :-)</string>    
    <string name="noResourceSelected">No Resource Selected</string>
    <string name="noResourceSelectedHelp">You should select at least one resource to use this application.\n\nDo you want to do this now?</string>
    
    <string name="resources">Resources</string>
    <string name="manageResources">Manage Resources</string>
    <string name="manageResourcesHelp">Choose the resources\' set</string>
    <string name="selectResources">Select Resources</string>
    <string name="refresh">Refresh</string>
    <string name="configuration">Configuration</string>
    <string name="reserved">Reserved</string>
    <string name="reserve_question">Do you want to make a reservation?</string>
    <string name="unreserve_question">Do you want to delete this reserve?</string>
    <string name="download_data">Downloading data</string>   

    <string name="download_data_error">Error downloading data</string>
    
    <string name="loading">Loading</string>
    <string name="loadingAccounts">Loading Accounts</string>
    
    <string name="synchronizingCalendars">Synchronizing Resources</string>
    <string name="synchronizingError">Error Synchronizing Resources</string>
    
    <string name="selectDuration">Select duration</string>
    <string name="minutes">minutes</string>
    
    <string name="createdByQuickMeeting">Reserved</string>   
    <string name="creationError">Error creating event</string>
    <string name="deletionError">Error deleting event</string>
    
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="maybeLater">Maybe later</string>
    <string name="reload">Reload</string>
    <string name="finish">Finish</string>
    <string name="cancel">Cancel</string>
    
    <string name="welcome">Welcome</string>
    <string name="welcomeHelp">
        Hi, Thanks for downloading QuickMeeting\n
        We will help you to start using this app\n
        \n
        Please, follow ours instructions</string>
    
	<string name="followGoogleInstructions">Follow Google Instructions</string>
    
    <!-- Change log  -->
    <string name="changelog_full_title">Change Log</string>
    <string name="changelog_title">What\'s New</string>
    <string name="changelog_ok_button">OK</string>
    <string name="changelog_show_full">more</string>

</resources>
