<?xml version="1.0" encoding="utf-8"?>
<!-- 
    This file is part of QuickMeeting.

    QuickMeeting is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    QuickMeeting is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with QuickMeeting.  If not, see <http://www.gnu.org/licenses/>.    
 -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference android:key="aboutAbout" android:title="@string/about" android:summary="@string/aboutThisSoftware"/>
    <Preference android:key="aboutChangeLog" android:title="@string/changeLog" android:summary="@string/changeLogHelp"/>
    <Preference android:key="aboutLicense" android:title="@string/license" android:summary="@string/licenseGNU"/>
    

</PreferenceScreen>