<?xml version="1.0" encoding="utf-8"?>
<!-- 
    This file is part of QuickMeeting.

    QuickMeeting is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    QuickMeeting is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with QuickMeeting.  If not, see <http://www.gnu.org/licenses/>.    
 -->
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/menuHomeRefresh"        
          android:icon="@drawable/ic_menu_refresh"
          android:title="@string/refresh"/>
    
    <item android:id="@+id/menuHomeConfiguration"        
          android:icon="@android:drawable/ic_menu_manage"
          android:title="@string/configuration"/>
    
    <item android:id="@+id/menuHomeAbout"        
          android:icon="@android:drawable/ic_menu_info_details"
          android:title="@string/about"/>
</menu>