<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="fill_parent" 
	android:layout_width="fill_parent"
	android:orientation="vertical">
	<LinearLayout
	    android:layout_width="fill_parent"
		android:layout_height="0dp" 
		android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">
		 <TextView		 		
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/followGoogleInstructions"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:padding="5dp"/>

		 <android.webkit.WebView
		     android:id="@+id/welcomeAccountWebView"
		     android:layout_width="fill_parent"
		     android:layout_height="fill_parent" >
		 </android.webkit.WebView>
		 
	</LinearLayout>

	<LinearLayout 
		android:layout_height="wrap_content" 
		android:layout_width="fill_parent"
		>
             <Button
                android:layout_weight="1"
                android:id="@+id/welcomeAccountCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel" />

            <Button
                android:layout_weight="1"
                android:id="@+id/welcomeAccountRestart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reload" />
	</LinearLayout>
</LinearLayout>
